Configure for Railway: Add Dockerfile, fix DB config, resolve legacy API issues