@@ -15,11 +15,10 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import connection.*;
 import java.security.MessageDigest;
-import sun.misc.*;
+import java.util.Base64;
 import mail.*;
 import mail.MailVerify;
 import mail.AuthCode;
-import com.sun.mail.smtp.DigestMD5;
 /**
  *
  * @author ICT
@@ -62,7 +61,7 @@ public class facultyregistration extends HttpServlet {
             MessageDigest MD5=MessageDigest.getInstance("MD5");
             MD5.update(passwd.getBytes(),0,passwd.getBytes().length);
             byte[] hashvalue=MD5.digest();
-            String newpasswd=new BASE64Encoder().encode(hashvalue);
+            String newpasswd=Base64.getEncoder().encodeToString(hashvalue);
             Config c = new Config();
             Connection con = c.getcon();
             Statement st = con.createStatement();
